Integration with redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.h2.console.enabled=true
  
 # Custom H2 Console URL
 spring.h2.console.path=/h2
+
+redis.host=localhost
+redis.port=6379
+redis.password=
+redis.jedis.pool.max-total=16
+redis.jedis.pool.max-idle=8
+redis.jedis.pool.min-idle=4
