Hystrix implementation for product service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,13 @@ redis.password=
 redis.jedis.pool.max-total=16
 redis.jedis.pool.max-idle=8
 redis.jedis.pool.min-idle=4
+
+hystrix.command.getProductById.execution.isolation.thread.timeoutInMilliseconds=3000
+hystrix.command.getProductById.circuitBreaker.requestVolumeThreshold=10
+hystrix.command.getProductById.circuitBreaker.sleepWindowInMilliseconds=5000
+hystrix.command.getProductById.circuitBreaker.errorThresholdPercentage=50
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=3000
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=6
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=5000
+hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
