added discovery client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8086
 spring.datasource.url=jdbc:h2:mem:testdb
-#spring.application.name=product-service
+spring.application.name=product-service
 spring.cloud.config.enabled=false
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8501/eureka
 
 #spring.datasource.url = jdbc:h2:file:/data/sample
 #spring.datasource.url = jdbc:h2:file:C:/data/sample
