--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,4 @@ hystrix.command.default.circuitBreaker.requestVolumeThreshold=6
 hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=5000
 hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
 
+spring.main.allow-bean-definition-overriding=true
