--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port=8086
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.application.name=product-service
+
+spring.devtools.restart.enabled=true
 spring.cloud.config.enabled=false
-eureka.client.serviceUrl.defaultZone=http://localhost:8501/eureka
-management.endpoints.web.exposure.include=hystrix.stream
+management.endpoints.web.exposure.include=mappings,info,beans,health,routes,httptrace,hystrix.stream
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8501/eureka
 
@@ -34,3 +37,5 @@ hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=5000
 hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
 
 spring.main.allow-bean-definition-overriding=true
+
+gridwall.products.page.size=5
